@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.978 2009-02-05 22:23:10 castaglia Exp $
+$Id: NEWS,v 1.979 2009-02-05 22:26:28 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -15,6 +15,7 @@ CVS
   after each call.
 - Bug 2894 - Deprecate the AnonymousGroup directive.
 - Bug 3123 - Use PQescapeStringConn() rather than PQescapeString().
+- Bug 3133 - mod_facts should advertise TVFS support in the FEAT response.
 
 1.3.2 - Released 5-Feb-2009
 --------------------------------
